building the header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,56 @@
         <title>trillo &mdash; Your all-in-one booking app</title>
     </head>
     <body>
-        TRILLO HOTELS
+        <div class="container">
+
+            <header class="header">
+                <img src="img/logo.png" alt="trillo logo" class="logo">
+                <form action="#" class="search">
+                    <input type="text" class="search_input" placeholder="Search hotels">
+                    
+                    <button class="search_button">
+                        <svg class="search__icon">
+                            <use xlink:href="img/sprite.svg#icon-instagram"></use>
+                        </svg>
+                    </button>
+                </form>
+
+                <nav class="user_nav">
+                    <div class="user_nav__icon-box">
+                        <svg class="user_nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-mail"></use>
+                        </svg>
+                        <span class="user_nav__notification">7</span>
+                    </div> 
+                    
+                    <div class="user_nav__icon-box">
+                        <svg class="user_nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-map"></use>
+                        </svg>
+                        <span class="user_nav__notification">13</span>
+                    </div>
+
+                    <div class="user_nav__icon-box">
+                        <img src="img/user.jpg" alt="erser photo" class="user_nav__user-photo">
+                        <span class="user_nav__user-name">Jonas</span>
+                    </div>
+                </nav>
+
+
+
+            </header>
+
+            <div class="content">
+                <nav class="sidebar">
+
+                </nav>
+
+                <main class="hotel-view">
+                    Hotel view
+                </main>
+            </div>
+
+        </div>
+
     </body>
 </html>
