--- a/index.html
+++ b/index.html
@@ -51,13 +51,59 @@
             </header>
 
             <div class="content">
+
                 <nav class="sidebar">
 
+                    <ul class="side_nav">
+
+                        <li class="side_nav__item side_nav__item--active">
+                            <a href="#" class="side_nav__link">
+                                <svg class="side_nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-chat"></use>
+                                </svg>
+                                <span class="side_nav__notification">Hotel</span>
+                            </a>
+                        </li>
+
+                        <li class="side_nav__item">
+                            <a href="#" class="side_nav__link">
+                                <svg class="side_nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-aircraft"></use>
+                                </svg>
+                                <span class="side_nav__notification">Flight</span>
+                            </a>
+                        </li>
+
+
+                        <li class="side_nav__item">
+                            <a href="#" class="side_nav__link">
+                                <svg class="side_nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-wallet"></use>
+                                </svg>
+                                <span class="side_nav__notification">Car Rental</span>
+                            </a>
+                        </li>
+                        
+                        <li class="side_nav__item">
+                            <a href="#" class="side_nav__link">
+                                <svg class="side_nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-mail"></use>
+                                </svg>
+                                <span class="side_nav__notification">Tours</span>
+                            </a>
+                        </li>
+
+                    </ul>
+
+                    <div class="legal">
+                        &copy; 2020 by Trillio. all rights reserverd.
+                    </div>
                 </nav>
 
                 <main class="hotel-view">
                     Hotel view
                 </main>
+
             </div>
 
         </div>
